--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="hu.silentsignal.android.nfcat"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.NFC"/>
     <application android:label="@string/app_name" >
         <activity android:name="Main"
                   android:label="@string/app_name">
