--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,6 +5,7 @@
       android:versionName="1.0">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC"/>
+    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="14" />
     <application android:label="@string/app_name" >
         <activity android:name="Main"
                   android:label="@string/app_name">
